page de connection et creation de compte et affichage de home

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -6,8 +6,8 @@
 </head>
 <body>
     <h2>Bonjour 
-		<span th:text="${patient.id}"></span>
-		<span th:text="${patient.email}"></span></h2>
+		<span th:text="${session.patient.prenom}"></span>
+		<span th:text="${session.patient.nom}"></span></h2>
 		
     <h1>Vos rendez vous a venir</h1>
     
