affichage des champ des cle etrangere

--- a/src/main/resources/templates/medecinHome.html
+++ b/src/main/resources/templates/medecinHome.html
@@ -8,7 +8,7 @@
 		<span th:text="${session.medecin.prenom}"></span><br>
 		<span th:text="${session.medecin.nom}"></span><br>
 		<span th:text="${session.medecin.specialite.libelle}"></span><br>
-		<span th:text="${session.medecin.ville.libelle}"></span><br>
+		<span th:text="${session.medecin.ville.nomVille}"></span><br>
 			
 		</h2>
 		
