--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -9,9 +9,9 @@
 		<span th:text="${session.patient.prenom}"></span>
 		<span th:text="${session.patient.nom}"></span></h2>
 		
-    <h1>Vos rendez vous a venir</h1>
+    <h1><a th:href = "@{/rdv}">Vos Rendez vous</a></h1>
     
-    <a th:href = "@{/rendezvous}">Prenez Rendez vous</a>
+    <h1><a th:href = "@{/rendezvous}">Prenez Rendez vous</a></h1>
     
     
 </body>
