amlioration criteria query

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -11,7 +11,7 @@
 		
     <h1><a th:href = "@{/rdv}">Vos Rendez vous</a></h1>
     
-    <h1><a th:href = "@{/search}">Prenez Rendez vous</a></h1>
+    <h1><a th:href = "@{/patient/rdv/search}">Mes comptes Rendu</a></h1>
     
     
 </body>
